// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel section with border and title should match snapshot 1`] = `
<Fragment>
  <div
    className="panel__section-border"
  />
  <div
    className="panel__section-title"
  >
    test
  </div>
  children
</Fragment>
`;

exports[`Panel section without border should match snapshot 1`] = `
<Fragment>
  <div
    className="panel__section-title"
  >
    test
  </div>
  children
</Fragment>
`;

exports[`Panel section without title should match snapshot 1`] = `
<Fragment>
  <div
    className="panel__section-border"
  />
  children
</Fragment>
`;
